--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -16,41 +16,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: 1.76.0
-        override: true
+    - name: Set up Visual Studio
+      uses: microsoft/setup-msbuild@v1
 
-    - name: Download Visual Studio Installer
+    - name: Install Qt Visual Studio Tools Extension
       run: |
-        curl -L -o vs_installer.exe "https://aka.ms/vs/17/release/vs_installer.exe"
-
-    - name: Install Visual Studio 2022 and Components
-      run: |
-        vs_installer.exe modify --installPath "C:\Program Files\Microsoft Visual Studio\2022\Community" \
-          --add Microsoft.VisualStudio.Workload.NativeDesktop \
-          --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 \
-          --add Microsoft.VisualStudio.Component.VC.CMake.Project \
-          --add Microsoft.VisualStudio.ComponentGroup.NativeDesktop.Llvm.Clang \
-          --add Microsoft.VisualStudio.ComponentGroup.WebToolsExtensions \
-          --add Component.Qt
-
-    - name: Install Qt Visual Studio Tools
-      run: |
-        curl -L -o qt-vs-tools.vsix "https://download.qt.io/official_releases/vsaddin/qt-vs-addin-2.7.0.vsix"
-        "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\VSIXInstaller.exe" /quiet /norestart qt-vs-tools.vsix
-
-    - name: Build OpenTwin
-      run: |
-        cd ${{ github.workspace }}\MasterBuild
-        buildAll.bat
-
-    - name: Check Build Logs
-      run: |
-        type ${{ github.workspace }}\MasterBuild\buildLog_Summary.txt
-
-    - name: Create Deployment
-      run: |
-        cd ${{ github.workspace }}\MasterBuild
-        createDeployment.bat
+        curl -LO https://download.qt.io/development_releases/vsaddin/qt-vs-addin-2.7.0/vsaddin-msvc2019.vsix
+        start /wait vsaddin-msvc2019.vsix /quiet /norestart
