--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -19,7 +19,35 @@ jobs:
     - name: Set up Visual Studio
       uses: microsoft/setup-msbuild@v1
 
-    - name: Install Qt Visual Studio Tools Extension
+
+    - name: Install vswhere
+      run: choco install vswhere
+
+    - name: Install Qt 5.15.9
       run: |
-        curl -LO https://download.qt.io/development_releases/vsaddin/qt-vs-addin-2.7.0/vsaddin-msvc2019.vsix
-        start /wait vsaddin-msvc2019.vsix /quiet /norestart
+        choco install qt --version=5.15.9
+
+    - name: Clone Qt Visual Studio Tools
+      run: git clone https://code.qt.io/qt-labs/vstools.git
+
+    - name: Set environment variables
+      run: |
+        echo "QTBUILD_STATIC_VS2022=C:\\Qt\\5.15.9\\msvc2019_64" >> $GITHUB_ENV
+
+    - name: Build Qt Visual Studio Tools
+      run: |
+        cd vstools
+        vstools.bat -init -startvs
+
+    - name: Verify installation
+      run: |
+        vswhere -latest -products * -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe
+
+    - name: List Visual Studio Extensions
+      run: |
+        powershell -command "Get-ChildItem -Path 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions'"
+
+    - name: Check installation
+      run: |
+        powershell -command "Get-ChildItem -Path 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions' | Where-Object { $_.Name -like '*Qt*' }"
+        
