--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -23,9 +23,13 @@ jobs:
     - name: Install vswhere
       run: choco install vswhere
 
+    - name: Download Qt 5.15.9
+      run: |
+        curl -LO https://download.qt.io/official_releases/qt/5.15/5.15.9/qt-opensource-windows-x86-5.15.9.exe
+
     - name: Install Qt 5.15.9
       run: |
-        choco install qt --version=5.15.9
+        qt-opensource-windows-x86-5.15.9.exe /silent
 
     - name: Clone Qt Visual Studio Tools
       run: git clone https://code.qt.io/qt-labs/vstools.git
@@ -50,4 +54,4 @@ jobs:
     - name: Check installation
       run: |
         powershell -command "Get-ChildItem -Path 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions' | Where-Object { $_.Name -like '*Qt*' }"
-        
+
