--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,15 +1,9 @@
-name: CI Pipeline
+name: Install Qt Visual Studio Tools Extension
 
-on:
-  push:
-    branches:
-      - ci
-  pull_request:
-    branches:
-      - ci
+on: [push, pull_request]
 
 jobs:
-  build:
+  setup-qt-vs-tools:
     runs-on: windows-latest
 
     steps:
@@ -19,27 +13,58 @@ jobs:
     - name: Set up Visual Studio 2022
       uses: microsoft/setup-msbuild@v1
 
+    - name: Download Qt Visual Studio Tools Extension
+      shell: pwsh
+      run: |
+        curl -LO https://download.qt.io/development_releases/vsaddin/qt-vs-addin-2.7.0/vsaddin-msvc2022.vsix
+
     - name: Install Qt Visual Studio Tools Extension
       shell: pwsh
       run: |
         $vsixPath = "$env:USERPROFILE\vsaddin-msvc2022.vsix"
-        $vsixInstallerPath = "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\VSIXInstaller.exe"
-        if (-Not (Test-Path $vsixInstallerPath)) {
-          $vsixInstallerPath = "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\Common7\IDE\VSIXInstaller.exe"
+        $possiblePaths = @(
+            "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\VSIXInstaller.exe",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\Common7\IDE\VSIXInstaller.exe",
+            "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\VSIXInstaller.exe",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Professional\Common7\IDE\VSIXInstaller.exe",
+            "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\VSIXInstaller.exe",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\VSIXInstaller.exe"
+        )
+        $vsixInstallerPath = $null
+        foreach ($path in $possiblePaths) {
+            if (Test-Path $path) {
+                $vsixInstallerPath = $path
+                break
+            }
         }
-        if (-Not (Test-Path $vsixInstallerPath)) {
-          throw "VSIXInstaller.exe not found."
+        if (-not $vsixInstallerPath) {
+            Write-Error "VSIXInstaller.exe not found in any of the expected paths."
+            throw "VSIXInstaller.exe not found."
         }
+        Write-Output "VSIXInstaller.exe found at: $vsixInstallerPath"
         & $vsixInstallerPath /quiet /a /q $vsixPath
 
     - name: Verify installation
       shell: pwsh
       run: |
-        $devenvPath = "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\devenv.exe"
-        if (-Not (Test-Path $devenvPath)) {
-          $devenvPath = "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\Common7\IDE\devenv.exe"
+        $possiblePaths = @(
+            "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\devenv.exe",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\Common7\IDE\devenv.exe",
+            "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\devenv.exe",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Professional\Common7\IDE\devenv.exe",
+            "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\devenv.exe",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\devenv.exe"
+        )
+        $devenvPath = $null
+        foreach ($path in $possiblePaths) {
+            if (Test-Path $path) {
+                $devenvPath = $path
+                break
+            }
         }
-        if (-Not (Test-Path $devenvPath)) {
-          throw "devenv.exe not found."
+        if (-not $devenvPath) {
+            Write-Error "devenv.exe not found in any of the expected paths."
+            throw "devenv.exe not found."
         }
+        Write-Output "devenv.exe found at: $devenvPath"
         & $devenvPath /updateconfiguration
